--- a/app/src/main/res/layout/fragment_classroom2_member_add_by_phone.xml
+++ b/app/src/main/res/layout/fragment_classroom2_member_add_by_phone.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/root_lay"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
         >
 
     <android.support.constraint.ConstraintLayout
@@ -106,7 +107,6 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/phone_input"
                 />
-
 
 
     </android.support.constraint.ConstraintLayout>
