--- a/app/src/main/res/layout/fragment_classroom2_profile.xml
+++ b/app/src/main/res/layout/fragment_classroom2_profile.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/root_lay"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
         >
 
     <android.support.constraint.ConstraintLayout
@@ -122,7 +123,7 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 />
-        
+
         <Button
                 android:id="@id/send_btn"
                 android:layout_width="wrap_content"
