日历小圆点大小调整

--- a/calendar/src/main/res/values/dimens.xml
+++ b/calendar/src/main/res/values/dimens.xml
@@ -6,5 +6,6 @@
     <dimen name="calendar_min_distance">5dp</dimen>
     <dimen name="auto_scroll_distance">15dp</dimen>
     <integer name="calendar_text_size">13</integer>
+    <dimen name="hint_circle_radius">3dp</dimen>
 
 </resources>
