--- a/app/src/main/res/layout/fragment_classroom2_play.xml
+++ b/app/src/main/res/layout/fragment_classroom2_play.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/play_root_lay"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -8,11 +9,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
+
+
     <FrameLayout
-        android:id="@+id/layout_idle_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+            android:id="@+id/layout_idle_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
 
     <View
             android:id="@+id/control_click"
@@ -48,11 +51,11 @@
     <include
             layout="@layout/layout_classroom2_control_land"
             />
-    
+
     <FrameLayout
-        android:id="@+id/screenshot_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+            android:id="@+id/screenshot_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
     <include
             layout="@layout/layout_classroom2_right_slide_panel"
