--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -50,6 +50,10 @@
     <dimen name="drop_down_list_header_progress_bar_height">36dp</dimen>
     <dimen name="default_border_width">0dp</dimen>
     <dimen name="status_bar_height">40dp</dimen>
+    <dimen name="o2o_width">@dimen/px285</dimen>
+    <dimen name="o2o_height">@dimen/px160</dimen>
+    <dimen name="o2o_margin_left">@dimen/px30</dimen>
+    <dimen name="o2o_margin_top">@dimen/px100</dimen>
 
     <!--负的-->
     <dimen name="px_10">-5.0dp</dimen>
