--- a/app/src/main/res/layout/fragment_classroom2_living.xml
+++ b/app/src/main/res/layout/fragment_classroom2_living.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<cn.xiaojs.xma.ui.classroom2.widget.O2oDragLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/stream_root_lay"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -95,4 +95,4 @@
             android:visibility="gone"
             />
 
-</RelativeLayout>
+</cn.xiaojs.xma.ui.classroom2.widget.O2oDragLayout>
