--- a/app/src/main/res/layout/layout_wb_handwriting_pop.xml
+++ b/app/src/main/res/layout/layout_wb_handwriting_pop.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-        <TextView
+        <!--<TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -25,7 +25,7 @@
                 android:gravity="right"
                 android:text="@string/paint_size"
                 android:textColor="@color/font_dark_gray"
-                android:textSize="@dimen/font_28px"/>
+                android:textSize="@dimen/font_28px"/>-->
 
         <SeekBar
                 android:id="@+id/paint_thickness"
@@ -36,7 +36,7 @@
                 android:maxHeight="@dimen/px2"
                 android:thumbOffset="@dimen/px6"
                 android:foregroundGravity="center_vertical"
-                android:thumb="@drawable/paint_progress_controller"
+                android:thumb="@drawable/shape_white_circle_point"
                 android:progressDrawable="@drawable/wb_paint_progress_bar"
                 android:max="31"/>
     </LinearLayout>
